2006-08-24  Alex Roitman  <shura@gramps-project.org>
	* src/glade/gramps.glade (family_editor): Remove Y expansion
	property on mother-related buttons.
	* src/DataViews/_FamilyList.py: Add column editor.
	* src/plugins/ChangeTypes.py (run_tool): Properly set the new type.
	(on_apply_clicked): Properly save entered types, including custom.

2006-08-23  Alex Roitman  <shura@gramps-project.org>
	* src/DataViews/_PersonView.py (person_removed): Properly create
	and pass the filter when searchbar is enabled (not sidebar).
	* src/FilterEditor/_FilterEditor.py (clone_filter): Add method;
	Support clone-and-edit functionality.
	* src/glade/rule.glade (filter_list): Add clone button.
	* src/plugins/ChangeTypes.py (run_tool): Compare English strings.
	* src/Editors/_EditPerson.py (_image_callback): Take three
	arguments; correctly call load_photo(); rebuild gallery.
	(load_photo): Name path variable as such, for clarity.
	* src/DataViews/_PedigreeView.py (PedigreeView.goto_active_person): 
	Update status bar on person change.
	* src/DataViews/_RelationView.py (RelationshipView.change_person):
	Update status bar on person change.
	* src/Merge/_MergePerson.py (MergePeopleUI.__init__): Properly
	close managed window.
	* src/glade/mergedata.glade: Remove unneeded signal connections.

2006-08-22  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/EventCmp.py: Add proper date sorting.

2006-08-22  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: RESN support
	* src/GrampsDb/_WriteGedcom.py: RESN support
	* src/GrampsDb/_GedTokens.py: RESN support
	* src/GrampsDb/_WriteGedcom.py: apply event type string conversion 
	fix to family types

2006-08-22  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: show url when no description (#0000319)

2006-08-22  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Person/_IsDescendantFamilyOf.py: Rewrite.
	* src/Filters/_FilterParser.py (startElement): Upgrade existing